--- a/repository.yaml
+++ b/repository.yaml
@@ -1,4 +1,4 @@
 
 name: Open Surplus Manager Home Assistant Add-on
-url: https://github.com/JoseRa9/OSM-HA-Addon
-maintainer: JoseRa9
+url: https://github.com/JoseRMorales/OSM-HA-Addon
+maintainer: JoseRMorales
